--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "mongoose": "^7.6.0"
+    "mongoose": "^7.6.0",
+    "slugify": "^1.6.6"
   }
 }
